--- a/01_NB_IntroductionPython.ipynb
+++ b/01_NB_IntroductionPython.ipynb
@@ -294,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -311,6 +313,31 @@
     "r = [ i/s for i in randomNumbers ]\n",
     "print (r)\n",
     "print(sum(r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.15744403  0.09127099  0.05447181  0.10317289  0.12818364  0.06885056\n",
+      "  0.07814365  0.07629094  0.13886543  0.10330606]\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "randomNumbers = numpy.random.rand(10)\n",
+    "s = sum(randomNumbers)\n",
+    "r = randomNumbers / s\n",
+    "print(r)\n",
+    "print(sum(r))\n"
    ]
   },
   {
