ex4 done with pics

--- a/05_NB_Exercise.ipynb
+++ b/05_NB_Exercise.ipynb
@@ -54,7 +54,15 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('database is locked',)).History will not be written to the database.\n"
+     ]
+    }
+   ],
    "source": [
     "rectGridOutline = vtk.vtkRectilinearGridOutlineFilter()\n",
     "rectGridOutline.SetInputData(rectGridReader.GetOutput())\n",
